--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "mambu",
         "zf2"
     ],
-    "homepage": "http://megamitch.ph",
+    "homepage": "https://mot.megamitch.com",
     "authors": [
         {
             "name": "Gab Amba",
@@ -24,7 +24,8 @@
       }
     },
     "require": {
-        "php": ">=5.4"
+        "php": ">=5.4",
+        "guzzlehttp/guzzle": "5.2.*"
     },
     "require-dev": {        
         "phpunit/phpunit": "4.*",
