--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
     "keywords": [
         "megamitch",
         "office tools",
-        "mambu",
-        "zf2"
+        "mambu"
     ],
     "homepage": "https://mot.megamitch.com",
     "authors": [
@@ -25,10 +24,10 @@
     },
     "require": {
         "php": ">=5.4",
-        "guzzlehttp/guzzle": "5.2.*"
+        "guzzlehttp/guzzle": "~5.2"
     },
     "require-dev": {        
-        "phpunit/phpunit": "4.*",
-        "phpunit/php-invoker": "1.*"
+        "phpunit/phpunit": "~4.5",
+        "phpunit/php-invoker": "~1.1"
     }
 }
