--- a/composer.json
+++ b/composer.json
@@ -4,16 +4,19 @@
     "license": "MIT",
     "type": "application",
     "keywords": [
-        "megamitch",
-        "office tools",
-        "mambu"
+        "mambu api"
     ],
-    "homepage": "https://mot.megamitch.com",
     "authors": [
         {
             "name": "Gab Amba",
             "email": "gamba@gabbydgab.com",
-            "homepage": "http://www.gabbydgab.com/"            
+            "homepage": "http://www.gabbydgab.com/",
+            "role": "Development Lead"
+        },
+        {
+            "name": "Jermain Obial",
+            "email": "jerm.obial@megamitch.com",
+            "role": "Product Development Manager"
         }
     ],
     "autoload": {
@@ -28,6 +31,7 @@
     },
     "require-dev": {        
         "phpunit/phpunit": "~4.5",
-        "phpunit/php-invoker": "~1.1"
+        "phpunit/php-invoker": "~1.1",
+        "zendframework/zendframework": "~2.3"
     }
 }
